--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,10 +27,13 @@
     "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-lazyload": "^3.2.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "unicons": "^0.0.3",
     "web-vitals": "^2.1.4"
   },
